attr/TODO
Does not build on NetBSD:

https://savannah.nongnu.org/bugs/index.php?63920

  CC       libattr/la-syscalls.lo
libattr/syscalls.c: In function 'libattr_setxattr':
libattr/syscalls.c:36:17: error: '__NR_setxattr' undeclared (first use in this function); did you mean 'SYS_setxattr'?
   36 |  return syscall(__NR_setxattr, path, name, value, size, flags);
      |                 ^~~~~~~~~~~~~
      |                 SYS_setxattr
libattr/syscalls.c:36:17: note: each undeclared identifier is reported only once for each function it appears in
libattr/syscalls.c: In function 'libattr_lsetxattr':
libattr/syscalls.c:42:17: error: '__NR_lsetxattr' undeclared (first use in this function); did you mean 'SYS_lsetxattr'?
   42 |  return syscall(__NR_lsetxattr, path, name, value, size, flags);
      |                 ^~~~~~~~~~~~~~
      |                 SYS_lsetxattr
libattr/syscalls.c: In function 'libattr_fsetxattr':
libattr/syscalls.c:48:17: error: '__NR_fsetxattr' undeclared (first use in this function); did you mean 'SYS_fsetxattr'?
   48 |  return syscall(__NR_fsetxattr, filedes, name, value, size, flags);
      |                 ^~~~~~~~~~~~~~
      |                 SYS_fsetxattr
libattr/syscalls.c: In function 'libattr_getxattr':
libattr/syscalls.c:54:17: error: '__NR_getxattr' undeclared (first use in this function); did you mean 'SYS_getxattr'?
   54 |  return syscall(__NR_getxattr, path, name, value, size);
      |                 ^~~~~~~~~~~~~
      |                 SYS_getxattr
  CC       libmisc/high_water_alloc.lo
libattr/syscalls.c: In function 'libattr_lgetxattr':
libattr/syscalls.c:60:17: error: '__NR_lgetxattr' undeclared (first use in this function); did you mean 'SYS_lgetxattr'?
   60 |  return syscall(__NR_lgetxattr, path, name, value, size);
      |                 ^~~~~~~~~~~~~~
      |                 SYS_lgetxattr
  CC       libmisc/next_line.lo
libattr/syscalls.c: In function 'libattr_fgetxattr':
libattr/syscalls.c:66:17: error: '__NR_fgetxattr' undeclared (first use in this function); did you mean 'SYS_fgetxattr'?
   66 |  return syscall(__NR_fgetxattr, filedes, name, value, size);
      |                 ^~~~~~~~~~~~~~
      |                 SYS_fgetxattr
libattr/syscalls.c: In function 'libattr_listxattr':
libattr/syscalls.c:71:17: error: '__NR_listxattr' undeclared (first use in this function); did you mean 'SYS_listxattr'?
   71 |  return syscall(__NR_listxattr, path, list, size);
      |                 ^~~~~~~~~~~~~~
      |                 SYS_listxattr
libattr/syscalls.c: In function 'libattr_llistxattr':
libattr/syscalls.c:76:17: error: '__NR_llistxattr' undeclared (first use in this function); did you mean 'SYS_llistxattr'?
   76 |  return syscall(__NR_llistxattr, path, list, size);
      |                 ^~~~~~~~~~~~~~~
      |                 SYS_llistxattr
libattr/syscalls.c: In function 'libattr_flistxattr':
libattr/syscalls.c:81:17: error: '__NR_flistxattr' undeclared (first use in this function); did you mean 'SYS_flistxattr'?
   81 |  return syscall(__NR_flistxattr, filedes, list, size);
      |                 ^~~~~~~~~~~~~~~
      |                 SYS_flistxattr
libattr/syscalls.c: In function 'libattr_removexattr':
libattr/syscalls.c:86:17: error: '__NR_removexattr' undeclared (first use in this function); did you mean 'SYS_removexattr'?
   86 |  return syscall(__NR_removexattr, path, name);
      |                 ^~~~~~~~~~~~~~~~
      |                 SYS_removexattr
libattr/syscalls.c: In function 'libattr_lremovexattr':
libattr/syscalls.c:91:17: error: '__NR_lremovexattr' undeclared (first use in this function); did you mean 'SYS_lremovexattr'?
   91 |  return syscall(__NR_lremovexattr, path, name);
      |                 ^~~~~~~~~~~~~~~~~
      |                 SYS_lremovexattr
libattr/syscalls.c: In function 'libattr_fremovexattr':
libattr/syscalls.c:96:17: error: '__NR_fremovexattr' undeclared (first use in this function); did you mean 'SYS_fremovexattr'?
   96 |  return syscall(__NR_fremovexattr, filedes, name);
      |                 ^~~~~~~~~~~~~~~~~
      |                 SYS_fremovexattr
